@@ -329,12 +329,14 @@ function MER:SetupMERAddons()
 		E.db["sle"]["dt"]["hide_guildname"] = false
 		E.db["sle"]["dt"]["guild"]["minimize_gmotd"] = false
 		E.db["sle"]["dt"]["guild"]["hide_gmotd"] = true
-		E.db["sle"]["dt"]["guild"]["totals"] = false
+		E.db["sle"]["dt"]["guild"]["totals"] = true
 		E.db["sle"]["dt"]["guild"]["hide_hintline"] = true
+		E.db["sle"]["dt"]["guild"]["textStyle"] = "Icon"
 		E.db["sle"]["dt"]["friends"]["sortBN"] = "revREALID"
 		E.db["sle"]["dt"]["friends"]["expandBNBroadcast"] = true
-		E.db["sle"]["dt"]["friends"]["totals"] = false
+		E.db["sle"]["dt"]["friends"]["totals"] = true
 		E.db["sle"]["dt"]["friends"]["hide_hintline"] = true
+		E.db["sle"]["dt"]["friends"]["textStyle"] = "Icon"
 		E.db["sle"]["dt"]["currency"]["Unused"] = false
 		E.db["sle"]["dt"]["currency"]["PvP"] = false
 		E.db["sle"]["dt"]["currency"]["Archaeology"] = false
